k8s/overlays/nuc-prod/esphome/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  template:
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: esphome
          securityContext:
            privileged: true
