k8s/overlays/nuc-prod/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: esphome.home-ops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esphome
                port:
                  name: http
